--- a/src/index.css
+++ b/src/index.css
@@ -6,6 +6,10 @@
   margin: 0;
   padding: 0;
 }
+body{
+  margin: 0;
+  padding: 0;
+}
 
 /* :root {
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
